// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormConfigMultimedia should allow excluding "required" 1`] = `
<div>
  <div
    className="form-group"
  >
    <label>
      Name
    </label>
    <Modeled(Connect(Field))
      model="template.data.properties[0].label"
    >
      <input
        className="form-control"
      />
    </Modeled(Connect(Field))>
  </div>
  <PropertyConfigOption
    label="Hide label"
    model="template.data.properties[0].noLabel"
  >
    <Tip
      icon="question-circle"
    >
      This property will be shown without the label.
    </Tip>
  </PropertyConfigOption>
  <PropertyConfigOption
    label="Full width"
    model="template.data.properties[0].fullWidth"
  >
    <Tip
      icon="question-circle"
    >
      This property will be shown using all the width available.
    </Tip>
  </PropertyConfigOption>
  <PropertyConfigOption
    label="Show in cards"
    model="template.data.properties[0].showInCard"
  >
    <Tip
      icon="question-circle"
    >
      This property will appear in the library cards as part of the basic info.
    </Tip>
  </PropertyConfigOption>
  <div>
    <div
      className="form-group"
    >
      <label>
        Style
      </label>
      <Select
        model="template.data.properties[0].style"
        options={
          Array [
            Object {
              "_id": "contain",
              "name": "Fit",
            },
            Object {
              "_id": "cover",
              "name": "Fill",
            },
          ]
        }
        optionsLabel="name"
        optionsValue="_id"
      />
    </div>
    <div
      className="protip"
    >
      <p>
        <b>
          Fit
        </b>
         will show the entire media inside the container.
        <br />
        <b>
          Fill
        </b>
         will attempt to fill the container, using it's entire width. In cards, cropping is likely to occur.
      </p>
    </div>
  </div>
</div>
`;

exports[`FormConfigMultimedia should allow excluding "show in card" 1`] = `
<div>
  <div
    className="form-group"
  >
    <label>
      Name
    </label>
    <Modeled(Connect(Field))
      model="template.data.properties[0].label"
    >
      <input
        className="form-control"
      />
    </Modeled(Connect(Field))>
  </div>
  <PropertyConfigOption
    label="Hide label"
    model="template.data.properties[0].noLabel"
  >
    <Tip
      icon="question-circle"
    >
      This property will be shown without the label.
    </Tip>
  </PropertyConfigOption>
  <PropertyConfigOption
    label="Full width"
    model="template.data.properties[0].fullWidth"
  >
    <Tip
      icon="question-circle"
    >
      This property will be shown using all the width available.
    </Tip>
  </PropertyConfigOption>
  <PropertyConfigOption
    label="Required property"
    model="template.data.properties[0].required"
  >
    <Tip
      icon="question-circle"
    >
      You won't be able to save a document if this property is empty.
    </Tip>
  </PropertyConfigOption>
  <div>
    <div
      className="form-group"
    >
      <label>
        Style
      </label>
      <Select
        model="template.data.properties[0].style"
        options={
          Array [
            Object {
              "_id": "contain",
              "name": "Fit",
            },
            Object {
              "_id": "cover",
              "name": "Fill",
            },
          ]
        }
        optionsLabel="name"
        optionsValue="_id"
      />
    </div>
    <div
      className="protip"
    >
      <p>
        <b>
          Fit
        </b>
         will show the entire media inside the container.
        <br />
        <b>
          Fill
        </b>
         will attempt to fill the container, using it's entire width. In cards, cropping is likely to occur.
      </p>
    </div>
  </div>
</div>
`;

exports[`FormConfigMultimedia should allow excluding "style" 1`] = `
<div>
  <div
    className="form-group"
  >
    <label>
      Name
    </label>
    <Modeled(Connect(Field))
      model="template.data.properties[0].label"
    >
      <input
        className="form-control"
      />
    </Modeled(Connect(Field))>
  </div>
  <PropertyConfigOption
    label="Hide label"
    model="template.data.properties[0].noLabel"
  >
    <Tip
      icon="question-circle"
    >
      This property will be shown without the label.
    </Tip>
  </PropertyConfigOption>
  <PropertyConfigOption
    label="Full width"
    model="template.data.properties[0].fullWidth"
  >
    <Tip
      icon="question-circle"
    >
      This property will be shown using all the width available.
    </Tip>
  </PropertyConfigOption>
  <PropertyConfigOption
    label="Required property"
    model="template.data.properties[0].required"
  >
    <Tip
      icon="question-circle"
    >
      You won't be able to save a document if this property is empty.
    </Tip>
  </PropertyConfigOption>
  <PropertyConfigOption
    label="Show in cards"
    model="template.data.properties[0].showInCard"
  >
    <Tip
      icon="question-circle"
    >
      This property will appear in the library cards as part of the basic info.
    </Tip>
  </PropertyConfigOption>
</div>
`;

exports[`FormConfigMultimedia should allow setting a help text 1`] = `
<div>
  <div
    className="form-group"
  >
    <label>
      Name
    </label>
    <Modeled(Connect(Field))
      model="template.data.properties[0].label"
    >
      <input
        className="form-control"
      />
    </Modeled(Connect(Field))>
  </div>
  <div
    className="protip"
  >
    <Connect(Icon)
      icon="lightbulb"
    />
    <span>
      Some help text
    </span>
  </div>
  <PropertyConfigOption
    label="Hide label"
    model="template.data.properties[0].noLabel"
  >
    <Tip
      icon="question-circle"
    >
      This property will be shown without the label.
    </Tip>
  </PropertyConfigOption>
  <PropertyConfigOption
    label="Full width"
    model="template.data.properties[0].fullWidth"
  >
    <Tip
      icon="question-circle"
    >
      This property will be shown using all the width available.
    </Tip>
  </PropertyConfigOption>
  <PropertyConfigOption
    label="Required property"
    model="template.data.properties[0].required"
  >
    <Tip
      icon="question-circle"
    >
      You won't be able to save a document if this property is empty.
    </Tip>
  </PropertyConfigOption>
  <PropertyConfigOption
    label="Show in cards"
    model="template.data.properties[0].showInCard"
  >
    <Tip
      icon="question-circle"
    >
      This property will appear in the library cards as part of the basic info.
    </Tip>
  </PropertyConfigOption>
  <div>
    <div
      className="form-group"
    >
      <label>
        Style
      </label>
      <Select
        model="template.data.properties[0].style"
        options={
          Array [
            Object {
              "_id": "contain",
              "name": "Fit",
            },
            Object {
              "_id": "cover",
              "name": "Fill",
            },
          ]
        }
        optionsLabel="name"
        optionsValue="_id"
      />
    </div>
    <div
      className="protip"
    >
      <p>
        <b>
          Fit
        </b>
         will show the entire media inside the container.
        <br />
        <b>
          Fill
        </b>
         will attempt to fill the container, using it's entire width. In cards, cropping is likely to occur.
      </p>
    </div>
  </div>
</div>
`;

exports[`FormConfigMultimedia should hold show label, show in card and select card style type options by default 1`] = `
<div>
  <div
    className="form-group"
  >
    <label>
      Name
    </label>
    <Modeled(Connect(Field))
      model="template.data.properties[0].label"
    >
      <input
        className="form-control"
      />
    </Modeled(Connect(Field))>
  </div>
  <PropertyConfigOption
    label="Hide label"
    model="template.data.properties[0].noLabel"
  >
    <Tip
      icon="question-circle"
    >
      This property will be shown without the label.
    </Tip>
  </PropertyConfigOption>
  <PropertyConfigOption
    label="Full width"
    model="template.data.properties[0].fullWidth"
  >
    <Tip
      icon="question-circle"
    >
      This property will be shown using all the width available.
    </Tip>
  </PropertyConfigOption>
  <PropertyConfigOption
    label="Required property"
    model="template.data.properties[0].required"
  >
    <Tip
      icon="question-circle"
    >
      You won't be able to save a document if this property is empty.
    </Tip>
  </PropertyConfigOption>
  <PropertyConfigOption
    label="Show in cards"
    model="template.data.properties[0].showInCard"
  >
    <Tip
      icon="question-circle"
    >
      This property will appear in the library cards as part of the basic info.
    </Tip>
  </PropertyConfigOption>
  <div>
    <div
      className="form-group"
    >
      <label>
        Style
      </label>
      <Select
        model="template.data.properties[0].style"
        options={
          Array [
            Object {
              "_id": "contain",
              "name": "Fit",
            },
            Object {
              "_id": "cover",
              "name": "Fill",
            },
          ]
        }
        optionsLabel="name"
        optionsValue="_id"
      />
    </div>
    <div
      className="protip"
    >
      <p>
        <b>
          Fit
        </b>
         will show the entire media inside the container.
        <br />
        <b>
          Fill
        </b>
         will attempt to fill the container, using it's entire width. In cards, cropping is likely to occur.
      </p>
    </div>
  </div>
</div>
`;
